--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 ul{
     list-style: none;
+    padding: 0;
 }
 
 a {
@@ -290,6 +291,9 @@ height: 42px;
 border-radius: 8px;
 background-color:rgba(0, 0, 0, 0);
 border: none;
+display: block;
+text-align: center;
+padding: 9px 35px;
 }
 
 .popular_desc {
@@ -326,8 +330,7 @@ border: none;
     row-gap: 100px;
 }
 
-/* .popular_wrapper:hover {
-    border: 2px solid rgba(255, 255, 255, 0.80);
+.popular_wrapper:hover {
 background: rgba(40, 48, 54, 0.60);
 backdrop-filter: blur(25px);
 }
@@ -335,7 +338,7 @@ backdrop-filter: blur(25px);
 .popular_icon-button:hover {
     background-color: var(--color-hoverbtn);
     color: var(--color-logo);
-} */
+}
 
 .popular_btn {
 height: 64px;
@@ -362,6 +365,18 @@ margin-bottom: 200px;
 
 }
 
+.brand .container::before {
+    content: "";
+    display: block;
+    background: rgba(255, 72, 66, 0.20);
+filter: blur(60px);
+width: 159px;
+height: 159px;
+position: absolute;
+top: -50px;
+left: -40px;
+}
+
 .brand_title {
     font-size: 24px;
 font-style: normal;
@@ -378,6 +393,8 @@ margin: 0;
     backdrop-filter: blur(25px);
     height: 253px;
     padding: 55px 0;
+    position: relative;
+    overflow: hidden;
 
 
 }
@@ -426,6 +443,17 @@ cursor: pointer;
 background-color: var(--color-hoverbtn);
 border: none;
 }
+
+.newcomer_btn-like {
+    background: rgba(0, 0, 0, 0);
+    border: none;
+}
+
+.newcomer_btn-like:hover path {
+    fill: #FD3B41;
+    cursor: pointer;
+}
+
 
 .newcomer_desc-title {
     font-size: 24px;
@@ -498,6 +526,15 @@ background: var(--color-bg)
     display: flex;
     align-items: center;
     gap: 49px;
+}
+
+/* .newcomer_item:hover {
+    background: rgba(40, 48, 54, 0.60);
+    backdrop-filter: blur(25px);
+} */
+
+.newcomer_icon-img img:nth-child(1):hover {
+     background-color: #FD3B41;
 }
 
 .newcomer_list {
@@ -618,6 +655,8 @@ font-style: normal;
 font-weight: 500;
 line-height: 130%;
 text-align: center;
+margin-bottom: 25px;
+margin-top: 0;
 color: var(--color-toolstitlr);
 }
 
@@ -628,6 +667,8 @@ font-weight: 500;
 line-height: 30px;
 width: 427px;
 text-align: center;
+margin-top: 0;
+margin-bottom: 100px;
 color: var(--color-headlist);
 }
 
@@ -660,3 +701,152 @@ cursor: pointer;
 color: var(--color-logo);
 }
 
+.become_wrapp {
+    display: flex;
+}
+
+.become_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+hr {
+    height: 0.5px;
+    background: rgba(255, 255, 255, 0.15);
+    width: 100%;
+    border: none;
+    margin-top: 240px;
+    margin-bottom: 70px;
+}
+
+.footer_title {
+    font-size: 22px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+margin: 0;
+color: var(--color-toolstitlr);
+}
+
+.footer_subtitle {
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+margin-top: 25px;
+color: var(--color-toolstitlr);
+}
+
+.footer_desc {
+    width: 260px;
+    font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 25px;
+margin-top: 21px;
+color: var(--color-headlist);
+}
+
+.footer_antools-wrap {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.footer_img {
+    margin: 0;
+}
+
+footer {
+    padding-bottom: 98px;
+}
+
+.footer_title-first {
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+margin-bottom: 20px;
+color: var(--color-toolstitlr);
+}
+
+
+footer a {
+    color: var(--color-headlist);
+}
+
+/* .footer_item-first:nth-child(2) {
+margin-bottom: 10px;
+}
+
+.footer_item-first:nth-child(3) {
+    margin-bottom: 10px;
+    } */
+
+
+
+.footer_title-second {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 20px;
+    color: var(--color-toolstitlr);
+}
+
+.footer_item-second {
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+color: var(--color-headlist);
+}
+
+/* .footer_item-second:nth-child(2) {
+    margin-bottom: 10px;
+} */
+
+.footer_title-third {
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+margin-bottom: 20px;
+color: var(--color-toolstitlr);
+}
+
+.footer_list-third {
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+color: var(--color-headlist);
+}
+
+/* .footer_list-third:nth-child(2) {
+    margin-bottom: 10px;
+}
+
+.footer_list-third:nth-child(3) {
+    margin-bottom: 10px;
+} */
+
+.footer_list {
+    display: flex;
+    flex-direction: row;
+    gap: 115px;
+    margin-right: 10%;
+}
+
+.footer_antools {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_item-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+}
