--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ border: none;
 
 .newcomer_icon-button {
     text-align: center;
+    background-color: rgba(0, 0, 0, 0);
 padding: 9px 35px;
 }
 
@@ -509,7 +510,6 @@ color: var(--color-headlist);
     width: 106px;
 height: 42px;
 border-radius: 8px;
-background-color: var(--color-bg);
 border: none;
 font-size: 16px;
 font-style: normal;
